2000-12-17  Clint Adams  <schizo@debian.org>

	* 13288: Src/Modules/zftp.c: cast pointers when calling
	ztrapread and ztrapwrite.

	* 13287: Completion/Debian/_dpkg: complete multiple
	arguments for -i.

2000-12-16  Clint Adams  <schizo@debian.org>

	* unposted: Completion/User/.distfiles: add _mere

	* 13285: Src/Zle/zle_bindings.c, Src/Zle/zle_keymap.c:
	use vi-up-line-or-history and vi-down-line-or-history in
	the vicmd keymap (rather than their emacsy counterparts).

2000-12-15  Tanaka Akira  <akr@zsh.org>

	* 13281: Functions/Misc/mere: new implementation.
	Completion/User/_mere: new completion function for mere.

2000-12-13  Clint Adams  <schizo@debian.org>

	* 13250: Completion/User/.distfiles, Completion/User/_dict:
	completion for dict.

2000-12-06  Peter Stephenson  <pws@csr.com>

	* unposted: Src/jobs.c: rename waitjob() to zwaitjob() to avoid
	clash with IRIX system function.

2000-12-06  Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>

	* 13243: Makefile.in: we do not use Makefile in Completion and
	Functions any more.

2000-12-05  Clint Adams  <schizo@debian.org>

	* 13242: Src/Modules/terminfo.c: better error-checking
	for non-existent capabilities referenced by $terminfo.

2000-12-05  Peter Stephenson  <pws@csr.com>

	* unposted: Config/version.mk: 3.1.9-dev-8.

	* 13233, 13234: Src/Modules/terminfo.mdd, Src/Modules/terminfo.c:
	fix name for configure variable; don't crash on Solaris if
	capability not found.

	* Joel Smith <jsmith@caldera.com>: 13230: Src/exec.c, Src/glob.c,
	Src/lex.c, Src/parse.c, Src/text.c, Src/zsh.h: avoid name clashes
	with Linux kernel.

2000-12-04  Bart Schaefer  <schaefer@zsh.org>

	* 13229: Doc/Makefile.in: Include mod_term*.yo in MODDOCSRC.

2000-12-04  Clint Adams  <schizo@debian.org>

	* 13227: configure.in, Src/Modules/terminfo.c,
	Src/Modules/terminfo.mdd: do not build terminfo
	module if tigetstr() is not found in the same library
	as tgetent(), indentation fix, use tputs() in echoti