@@ -396,8 +396,8 @@ int vicmdbind[128] = {
     /* g */ z_undefinedkey,
     /* h */ z_vibackwardchar,
     /* i */ z_viinsert,
-    /* j */ z_vidownlineorhistory,
-    /* k */ z_viuplineorhistory,
+    /* j */ z_downlineorhistory,
+    /* k */ z_uplineorhistory,
     /* l */ z_viforwardchar,
     /* m */ z_visetmark,
     /* n */ z_virepeatsearch,
